# fahsion_recommendation

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  setup_env.sh
app/: __init__.py  main.py  utils.py
notebooks/: 00_pre_clean_data.ipynb  01_feature_preprocessing.ipynb  01a_articles_dynamic_features.ipynb  01b_articles_embeddings.ipynb  01c_customers_dynamic_feature.ipynb  02_candidate_generation.ipynb  02_candidate_generation_.ipynb  03_ranker_data_preprocessing.ipynb  04_ranker.ipynb  04a_hyperparameter_tuning.ipynb  04b_train_model.ipynb  04c_adhoc_ranker_training.ipynb  05_evaluation.ipynb
scripts/: deploy.sh  test_api.py
src/: __init__.py  candidate_generator.py  config.py  eval.py  experiment_tracking.py  feature_customers.py  feature_extraction.py  features_articles.py  input_preprocessing.py  metrics.py  ranker.py  train.py
src/sampling/: manager.py  popularity.py  repurchase.py  utils.py
src/utils/: core_utils.py  data_checks.py  embeddings.py  popularity.py  utils_torch.py
test/api/: conftest.py  test_main.py
test/sampling/: test_manager.py  test_popularity.py  test_repurchase.py  test_sampling_strategies.py  test_utils.py
test/utils/: test_embeddings.py  test_popularity.py
